fix bug 691770, add x-mozilla-keywords header to message copied from imap to local folder, r=neil